FIXED: Left sidebar layout issue

--- a/blocks/src/style.scss
+++ b/blocks/src/style.scss
@@ -767,8 +767,8 @@ ul.awsm-error-message li {
 	.awsm-job-2-col .awsm-b-filter-wrap.awsm-no-search-filter-wrap.awsm-jobs-alerts-on .awsm-b-filter-items{
 		width: 100% !important;
 	}
-	.awsm-job-2-col .awsm-b-filter-wrap .awsm-filter-item{
-		min-width: 100%;
+	.awsm-job-2-col .awsm-b-filter-wrap .awsm-b-filter-items{
+		width: 100%;
 	}
 	.awsm-job-2-col .awsm-b-filter-wrap form{
 		padding: 30px;
